--- a/src/style/index.css
+++ b/src/style/index.css
@@ -25,8 +25,8 @@ body::-webkit-scrollbar-thumb {
   background-color: rgb(49, 56, 00);
   outline: 1px solid slategrey;
 }
-
+/* 
 body::-webkit-scrollbar-button {
   background-color: rgb(154, 196, 184);
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-}
+} */
